@@ -331,8 +331,10 @@ const struct routine_t {
   { "mpn_ni_invertappr",       speed_mpn_ni_invertappr       },
   { "mpn_binvert",             speed_mpn_binvert             },
 
-  { "mpn_sbpi1_div_qr",        speed_mpn_sbpi1_div_qr        },
-  { "mpn_dcpi1_div_qr",        speed_mpn_dcpi1_div_qr        },
+  { "mpn_sbpi1_div_qr",        speed_mpn_sbpi1_div_qr,    FLAG_R_OPTIONAL},
+  { "mpn_dcpi1_div_qr",        speed_mpn_dcpi1_div_qr,    FLAG_R_OPTIONAL},
+  { "mpn_mu_div_qr",           speed_mpn_mu_div_qr,       FLAG_R_OPTIONAL},
+  { "mpn_mupi_div_qr",         speed_mpn_mupi_div_qr,     FLAG_R_OPTIONAL},
   { "mpn_sbpi1_divappr_q",     speed_mpn_sbpi1_divappr_q     },
   { "mpn_dcpi1_divappr_q",     speed_mpn_dcpi1_divappr_q     },
 
